# AndPlugLib

./: .gitignore  README.md  build.gradle  settings.gradle
andpluglib/: CMakeLists.txt  build.gradle
andpluglib/src/androidTest/java/com/omicronapplications/andpluglib/: PlayerServiceTest.java
andpluglib/src/main/: AndroidManifest.xml
andpluglib/src/main/cpp/: AndPlug.cpp  AndPlug.h  OboePlayer.cpp  OboePlayer.h  Opl.cpp  Opl.h  SongInfo.cpp  SongInfo.h  adplug.patch  andplayer-jni.cpp  andplayer-jni.h  common.h  libbinio.patch  oboe.patch
andpluglib/src/main/java/com/omicronapplications/andpluglib/: AndPlayerJNI.java  IAndPlugCallback.java  IPlayer.java  IPlayerJNI.java  PlayerController.java  PlayerService.java
andpluglib/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/omicronapplications/andplugtest/: PlayerActivity.java
app/src/main/res/layout/: main_layout.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
